test/test_suite/errors/error_else.c3t
module foo;

faultdef TEST;

module bar;
import foo;

fn int? abc()
{
	return foo::TEST~;
}

module baz;
import foo;

fn int? abc()
{
	return foo::TEST~;
}
